LNbank: AccessKeys refactoring
