# BTCPayServer.Plugins.LNbank/Resources/swagger/v1/swagger.template.lnbank.json
@@ -288,10 +288,6 @@
                         "type": "string",
                         "description": "The name of the wallet"
                     },
-                    "accessKey": {
-                        "type": "string",
-                        "description": "The access key of the wallet"
-                    },
                     "createdAt": {
                         "description": "The creation time of the wallet",
                         "allOf": [ {"$ref": "#/components/schemas/UnixTimestamp"}]
